--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "name": "towerdefensejs",
     "version": "1.0.0",
+    "homepage": "https://ilnazv.github.io/towerdefensejs/",
     "scripts": {
         "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js --colors",
-        "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
+        "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
@@ -18,6 +21,7 @@
         "eslint": "^6.8.0",
         "eslint-loader": "^3.0.3",
         "file-loader": "^5.1.0",
+        "gh-pages": "^4.0.0",
         "html-webpack-plugin": "^4.0.0-beta.11",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
