--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
         "eslint-loader": "^3.0.3",
         "file-loader": "^5.1.0",
         "gh-pages": "^4.0.0",
-        "html-webpack-plugin": "^4.0.0-beta.11",
+        "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.4",
         "ts-loader": "^7.0.1",
         "typescript": "^3.8.3",
-        "webpack": "^4.42.1",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.9.0",
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
