--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,28 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "sourceMap": true
-    }
-}
+      "allowSyntheticDefaultImports": true,
+      "noImplicitAny": true,
+      "module": "es2020",
+      "target": "es5",
+      "allowJs": true,
+      "jsx": "react",
+      "lib": ["es6", "dom"],
+      "sourceMap": true,
+      "moduleResolution": "node",
+      "rootDir": "src"
+    },
+    "exclude": [
+      "node_modules",
+      "build",
+      "scripts",
+      "acceptance-tests",
+      "webpack",
+      "jest",
+      "src/setupTests.ts",
+      "dist"
+    ],
+    "include": [
+      "src/*"
+    ]
+  }
+  
